Introduced matrix structure for populations visualization